Incrementally committing changes made over the duration of my time working on ED. Differences:    Makefile: Changed cs6 makefile in bin, 2nd arg modifies filename    dependency.mk: Added ddependencies for iso_alloc.f90 and isotopes.f90    install.sh: In cs6 bin, now reflects opt level E    isotopes.f90: This file contains memory for isotope accounting.    iso_alloc.f90: This file holds various routines for isotope accounting.

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,14 @@ ED/build/ed_2.1-opt
 */bin/*.c
 */bin/*.mod
 */bin/*.[fF]90
+*/cs6_build/bin/*.c
+*/cs6_build/bin/*.mod
+*/cs6_build/bin/*.[fF]90
+
+*/cs6_build/bin/slurm-*
+*/cs6_build/bin/qinst.out
+*/cs6_build/bin/qinst.err
+*/cs6_build/ed_2.1-*
 
 # specific rules
 BRAMS/build/bin/include.mk.opt
